[project]
name = "narrative-knowledge"
version = "0.0.1"
description = "Semantic analysis of narrative texts to extract entities and relationships"
authors = [
    {name = "IANTHEREAL"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pymupdf (>=1.26.1,<2.0.0)",
    "pdf2image (>=1.17.0,<2.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "openai (>=1.86.0,<2.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "boto3 (>=1.38.35,<2.0.0)",
    "google-genai (>=1.20.0,<2.0.0)",
    "pymysql (>=1.1.1,<2.0.0)",
    "tidb-vector (>=0.0.14,<0.0.15)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.3,<0.35.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "python-multipart (>=0.0.20,<0.1.0)",
    "tiktoken (>=0.7.0,<1.0.0)",
    "magic-pdf (>=0.5.0,<1.0.0)",
    "httpx[socks] (>=0.28.1,<0.29.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
